tests/reliability/reject/lex_stray_char.keel
def main(sys: System); Io:
    x = 5 `\u0060 ` 
    println(x)
